--- a/styles/globals.css
+++ b/styles/globals.css
@@ -56,6 +56,7 @@ body {
 
 body {
   font-size: 17px;
+  padding-top: 120px;
 }
 
 h1, h2, h3, h4, h5, h6 {
